--- a/AdminDashboard.html
+++ b/AdminDashboard.html
@@ -79,7 +79,7 @@
     <section id="mainSection">
         <fieldset>
             <legend>DOCTOR</legend>
-                <div onclick="approvalFunction()">Approval of Registration<span class="badge badge-bg-danger translate-middle rounded-pill">10</span></div>
+                <div onclick="approvalFunction()">Total Registration<span class="badge badge-bg-danger translate-middle rounded-pill">10</span></div>
                 <div onclick="manualOperationFunction()" id="divManual">Manual Operation<span class="badge bg-danger translate-middle rounded-pill">22</span></div>
                 <div onclick="approvalFunction()">Appointment neglect<span class="badge bg-danger translate-middle rounded-pill">14</span></div>
                 <div onclick="approvalFunction()">Request for Permission<span class="badge bg-danger translate-middle rounded-pill">5</span></div>
@@ -87,7 +87,7 @@
         </fieldset>
         <fieldset>
             <legend>DONOR</legend>
-                <div onclick="approvalFunction()">Approval of Registration<span class="badge bg-danger translate-middle rounded-pill">5</span></div>
+                <div onclick="approvalFunction()">Total Registration<span class="badge bg-danger translate-middle rounded-pill">5</span></div>
                 <div onclick="approvalFunction()">Approval of Login<span class="badge bg-danger translate-middle rounded-pill">32</span></div>
                 <div onclick="approvalFunction()">Appointment neglect<span class="badge bg-danger translate-middle rounded-pill">10</span></div>
                 <div onclick="approvalFunction()">Request for Certification<span class="badge bg-danger translate-middle rounded-pill">6</span></div>
@@ -95,7 +95,7 @@
         </fieldset>
         <fieldset>
             <legend>RECEIVER</legend>
-                <div onclick="approvalFunction()">Approval of Registration<span class="badge bg-danger translate-middle rounded-pill">10</span></div>
+                <div onclick="approvalFunction()">Total Registration<span class="badge bg-danger translate-middle rounded-pill">10</span></div>
                 <div onclick="approvalFunction()">Approval of Login<span class="badge bg-danger translate-middle rounded-pill">2</span></div>
                 <div onclick="approvalFunction()">Blood Donor Information<span class="badge bg-danger translate-middle rounded-pill">4</span></div>
                 <div onclick="approvalFunction()">Request for Certification<span class="badge bg-danger translate-middle rounded-pill">14</span></div>
