--- a/DonorLogin.html
+++ b/DonorLogin.html
@@ -28,8 +28,8 @@
         transform: rotateZ(360deg) scale(1.08) ;transition:.2s ease-out;text-transform: capitalize;}
         nav>ul>a>li:hover::after{content: 'page';display: block;font-weight: 100;font-size: x-small;
         transform:rotateZ(360deg) scale(1.08);transition:.2s ease-out;text-transform: capitalize;}
-        nav>ul>a>li{text-decoration: none;color:red}
-        #mainSection{display:flex;margin-left:50px;border:0px solid black;text-align:center;width:1400px;height:500px;background-color: white;color:crimson;}
+        nav>ul>a>li{text-decoration: none;color:red;image-orientation: flip;}
+        #mainSection{display:flex;margin-left:50px;border:0px solid black;text-align:center;width:1400px;height:600px;background-color: white;color:crimson;}
         #mainSection>section{border:0px solid black;text-align:center;width:300px;height:50px;background-color: aquamarine;color:crimson;}
         #mainSection>section:hover{border:1px solid black;text-align:center;width:300px;height:50px;background-color: rgb(3, 84, 57);color:white;}
 
